Добавлено покрытие юнит тестами