@@ -9,7 +9,7 @@ public class InMemoryHistoryManager implements HistoryManager {
     private ArrayList<Task> history;
 
     public InMemoryHistoryManager() {
-        history = new ArrayList<>(10);
+        history = new ArrayList<>();
     }
 
     // метод для просмотра последних задач
@@ -20,16 +20,36 @@ public class InMemoryHistoryManager implements HistoryManager {
 
     @Override
     public void updateHistory(Task task) {
-        if (!history.contains(task)) {
-            if (history.size() == 10) {
-                history.removeFirst();
+        if (task != null) {
+            if (!history.contains(task)) {
+                if (history.size() >= 10) {
+                    history.remove(0);
+                }
+                history.add(task);
             }
-            history.addLast(task);
         }
     }
 
     @Override
     public void add(Task task) {
-        history.add(task);
+        if (task != null) {
+            history.add(task);
+        }
+    }
+
+    public Task getCurrentTask(int id) {
+        Task latestTask = null;
+        for (int i = history.size() - 1; i >= 0; i--) {
+            Task t = history.get(i);
+            if (t.getId() == id) {
+                latestTask = t;
+                break;
+            }
+        }
+        return latestTask;
+    }
+
+    public Task getLastSavedTask(int id) {
+        return getCurrentTask(id);
     }
 }
